placeholder images, and fixed slider z-index

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,7 +1,16 @@
-@font-face {font-family: 'AvenirLTPro-Medium';src: url('../../webfonts/362C21_0_0.eot');src: url('../../webfonts/362C21_0_0.eot?#iefix') format('embedded-opentype'),url('../../webfonts/362C21_0_0.woff2') format('woff2'),url('../../webfonts/362C21_0_0.woff') format('woff'),url('../../webfonts/362C21_0_0.ttf') format('truetype');}
- 
-  
-@font-face {font-family: 'AvenirLTPro-Heavy';src: url('../../webfonts/362C21_1_0.eot');src: url('../../webfonts/362C21_1_0.eot?#iefix') format('embedded-opentype'),url('../../webfonts/362C21_1_0.woff2') format('woff2'),url('../../webfonts/362C21_1_0.woff') format('woff'),url('../../webfonts/362C21_1_0.ttf') format('truetype');}
+@font-face {
+    font-family: 'AvenirLTPro-Medium';
+    src: url('../../webfonts/362C21_0_0.eot');
+    src: url('../../webfonts/362C21_0_0.eot?#iefix') format('embedded-opentype'), url('../../webfonts/362C21_0_0.woff2') format('woff2'), url('../../webfonts/362C21_0_0.woff') format('woff'), url('../../webfonts/362C21_0_0.ttf') format('truetype');
+}
+
+
+@font-face {
+    font-family: 'AvenirLTPro-Heavy';
+    src: url('../../webfonts/362C21_1_0.eot');
+    src: url('../../webfonts/362C21_1_0.eot?#iefix') format('embedded-opentype'), url('../../webfonts/362C21_1_0.woff2') format('woff2'), url('../../webfonts/362C21_1_0.woff') format('woff'), url('../../webfonts/362C21_1_0.ttf') format('truetype');
+}
+
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -740,7 +749,8 @@ body {
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
     -moz-flex-direction: column;
-    width: 20%;
+    width: 300px;
+    z-index: 5;
 }
 
 .main {
@@ -777,6 +787,7 @@ body {
     transition: all 400ms ease-in-out;
     -webkit-transition: all 400ms ease-in-out;
     -moz-transition: all 400ms ease-in-out;
+    cursor: pointer;
 }
 
 .header-nav a:active,
@@ -784,14 +795,50 @@ body {
     opacity: .6;
 }
 
+.slide-pane {
+    width: 50%!important;
+}
+
 .slide-pane__overlay {
-    left: 20%;
+    left: 300px;
 }
 
 .slide-pane__header {
     background: #fff;
-    height: 0;
     border-bottom: none;
+}
+
+.slide-pane__content {
+    padding: 36px 80px;
+}
+
+.work-container {
+    display: flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    padding: 40px 0;
+}
+
+.work-row {
+    display: flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    margin-right: 30px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .slide-pane {
+        width: 70%!important;
+    }
 }
 
 @media only screen and (max-width: 800px) {
@@ -804,7 +851,6 @@ body {
     }
     .header-container {
         width: 100%;
-
     }
     .header-nav li {
         display: inline-block;
@@ -815,5 +861,16 @@ body {
     .header-logo {
         width: 30%;
         padding: 40px 0;
+    }
+    .slide-pane__overlay {
+        left: 0;
+        top: 370px;
+    }
+    .slide-pane {
+        width: 100%!important;
+        margin-right: 0;
+    }
+    .slide-pane__content {
+        width: 100%!important;
     }
 }
